--- a/issuer/appsettings.Development.json
+++ b/issuer/appsettings.Development.json
@@ -15,7 +15,7 @@
       "Roles": [ "User" ]
     }
   },
-  "iss_url": "https://excid.io",
+  "iss_url": "http://localhost:8001",
   "jwk": "{'kty': 'EC',  'crv': 'P-256', 'x': 'sCp_6IGfDeom0_9TxtLC_4elxsyOe6WLMpRYZDcvNtk', 'y': 'iwgCFXsk5yDXRvoCxMdkzTCI-uGm5lOA8c6zfMPsHi0', 'd': 'cLDyuB92yYB29iBJM4QpG-8hHrS_0b87IWrFWl9G6hs'}",
   "Objects": [
     {
