--- a/wallet/appsettings.Development.json
+++ b/wallet/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AuthorizedUsers": {
+    "user1": {
+      "Password": "user1!",
+      "Roles": [ "User" ]
+    }
   }
 }
