--- a/wallet/appsettings.Development.json
+++ b/wallet/appsettings.Development.json
@@ -5,10 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AuthorizedUsers": {
-    "user1": {
+  "AuthorizedUsers": [
+    {
+      "Username": "user1",
       "Password": "user1!",
       "Roles": [ "User" ]
     }
-  }
+  ]
 }
