--- a/pep/conf/proxy.conf
+++ b/pep/conf/proxy.conf
@@ -12,6 +12,21 @@
         "/authorize":
         {
             "authorization":{
+                "type":"imperial",
+                "trusted_issuers": {
+                    "http://testscript": {
+                        "issuer_key":{"crv": "P-256", "kty": "EC","x": "z30WuxpsPow8KpH0N93vW24nA0HD48_MluqgdEUvtU4","y": "VcKco12BZFPu5HU2LBLotTD9NitdlNxnBLngD-eTapM" },
+                        "issuer_key_type": "jwt"
+                    }
+	            },
+                "filters" :[
+                    ["$.aud", "https://zero.cloud"]
+                ]
+            }
+        },
+        "/vptest":
+        {
+            "authorization":{
                 "type":"vp",
                 "trusted_issuers": {
                     "http://testscript": {
