--- a/wallet/appsettings.Development.json
+++ b/wallet/appsettings.Development.json
@@ -8,9 +8,14 @@
   },
   "AuthorizedUsers": [
     {
-      "Username": "user1",
-      "Password": "user1!",
-      "Roles": [ "User" ]
+      "Username": "Tom",
+      "Password": "tom!!",
+      "Roles": [ "Employee", "Installer" ]
+    },
+    {
+      "Username": "Administrator",
+      "Password": "admin!!",
+      "Roles": [ "Admin" ]
     }
   ]
 }
