--- a/wallet/appsettings.Production.json
+++ b/wallet/appsettings.Production.json
@@ -5,10 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AuthorizedUsers": {
-    "user1": {
-      "Password": "user1!",
-      "Roles": [ "User" ]
+  "AuthorizedUsers": [
+    {
+      "Username": "Tom",
+      "Password": "tom!!",
+      "Roles": [ "Employee", "Installer" ]
+    },
+    {
+      "Username": "Administrator",
+      "Password": "admin!!",
+      "Roles": [ "Admin" ]
     }
-  }
+  ]
 }
