--- a/wallet/appsettings.Development.json
+++ b/wallet/appsettings.Development.json
@@ -8,13 +8,13 @@
   },
   "AuthorizedUsers": [
     {
-      "Username": "Tom",
+      "Username": "tom",
       "Password": "tom!!",
       "Roles": [ "Employee", "Installer" ]
     },
     {
-      "Username": "Administrator",
-      "Password": "admin!!",
+      "Username": "administrator",
+      "Password": "admin!",
       "Roles": [ "Admin" ]
     }
   ]
