--- a/issuer-2/appsettings.Production.json
+++ b/issuer-2/appsettings.Production.json
@@ -15,7 +15,9 @@
       "Roles": [ "User" ]
     }
   },
-  "iss_url": "https://acme.excid.io",
+  "wallet_url": "http://comp-wallet.excid.io",
+  "iss_url": "https://comp-issuer.excid.io",
+  "jwt_vc_iss": "https://comp-issuer.excid.io",
   "jwk": "{'kty': 'EC',  'crv': 'P-256', 'x': 'sCp_6IGfDeom0_9TxtLC_4elxsyOe6WLMpRYZDcvNtk', 'y': 'iwgCFXsk5yDXRvoCxMdkzTCI-uGm5lOA8c6zfMPsHi0', 'd': 'cLDyuB92yYB29iBJM4QpG-8hHrS_0b87IWrFWl9G6hs'}",
   "Roles": [
     "Emoloyee",
