--- a/wallet/appsettings.Production.json
+++ b/wallet/appsettings.Production.json
@@ -16,6 +16,16 @@
       "Username": "administrator",
       "Password": "admin!",
       "Roles": [ "Admin" ]
+    },
+    {
+      "Username": "plegma",
+      "Password": "plegma!",
+      "Roles": [ "Consumer" ]
+    },
+    {
+      "Username": "domx",
+      "Password": "domx!",
+      "Roles": [ "Consumer" ]
     }
   ]
 }
