--- a/issuer-2/appsettings.Production.json
+++ b/issuer-2/appsettings.Production.json
@@ -16,8 +16,8 @@
     }
   },
   "wallet_url": "https://comp-wallet.excid.io",
-  "iss_url": "https://comp-issuer.excid.io",
-  "jwt_vc_iss": "https://comp-issuer.excid.io",
+  "Host": "https://comp-issuer.excid.io",
+  "Issuer": "installer-company.example",
   "jwk": "{'kty': 'EC',  'crv': 'P-256', 'x': 'sCp_6IGfDeom0_9TxtLC_4elxsyOe6WLMpRYZDcvNtk', 'y': 'iwgCFXsk5yDXRvoCxMdkzTCI-uGm5lOA8c6zfMPsHi0', 'd': 'cLDyuB92yYB29iBJM4QpG-8hHrS_0b87IWrFWl9G6hs'}",
   "Roles": [
     "Emoloyee",
