--- a/issuer/appsettings.Development.json
+++ b/issuer/appsettings.Development.json
@@ -17,8 +17,8 @@
     }
   },
   "wallet_url": "http://localhost:8002",
-  "iss_url": "http://localhost:8001",
-  "jwt_vc_iss": "https://city-council.excid.io",
+  "Host": "http://localhost:8001",
+  "Issuer": "https://city-council.excid.io",
   "jwk": "{'kty': 'EC',  'crv': 'P-256', 'x': 'sCp_6IGfDeom0_9TxtLC_4elxsyOe6WLMpRYZDcvNtk', 'y': 'iwgCFXsk5yDXRvoCxMdkzTCI-uGm5lOA8c6zfMPsHi0', 'd': 'cLDyuB92yYB29iBJM4QpG-8hHrS_0b87IWrFWl9G6hs'}",
   "Objects": [
     {
