--- a/pep/conf/proxy.conf
+++ b/pep/conf/proxy.conf
@@ -1,42 +1,30 @@
 {
+    "vp_pdp_debug":1,
+    "openfga_pdp_debug":1,
     "resources":{
         "/secure/<path:path>":
         {
             "authorization":{
                 "type":"token",
                 "token_endpoint": {
-                    "type":"vc_verifier"
+                    "type":"vc_verifier",
+                    "scope":"excid-io.github.io.imperial",
+                    "response_uri":"http://localhost:9000/authorize",
+                    "client_name":"Digital twin",
+                    "wallet_auth_url":"http://localhost:8002/Credentials/Authorize"
 	            }
             }
         },
         "/authorize":
         {
             "authorization":{
-                "type":"imperial",
-                "trusted_issuers": {
-                    "http://testscript": {
-                        "issuer_key":{"crv": "P-256", "kty": "EC","x": "z30WuxpsPow8KpH0N93vW24nA0HD48_MluqgdEUvtU4","y": "VcKco12BZFPu5HU2LBLotTD9NitdlNxnBLngD-eTapM" },
-                        "issuer_key_type": "jwt"
-                    }
-	            },
-                "filters" :[
-                    ["$.aud", "https://zero.cloud"]
-                ]
+                "type":"imperial"
             }
         },
         "/vptest":
         {
             "authorization":{
-                "type":"vp",
-                "trusted_issuers": {
-                    "http://testscript": {
-                        "issuer_key":{"crv": "P-256", "kty": "EC","x": "z30WuxpsPow8KpH0N93vW24nA0HD48_MluqgdEUvtU4","y": "VcKco12BZFPu5HU2LBLotTD9NitdlNxnBLngD-eTapM" },
-                        "issuer_key_type": "jwt"
-                    }
-	            },
-                "filters" :[
-                    ["$.aud", "https://zero.cloud"]
-                ]
+                "type":"vp"
             }
         }   
     }
